# kspaceFirstOrder

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.clangd/index/: BaseFloatMatrix.cpp.EF0D5B6D86AF72AE.idx  BaseFloatMatrix.h.E99BC4B21ED55EA5.idx  BaseIndexMatrix.cpp.7FA10968E3F15F7E.idx  BaseIndexMatrix.h.F1AA03C12006C90C.idx  BaseMatrix.h.6C73DB1B0CA93DF5.idx  BaseOutputStream.cpp.8A171D6EBF59008B.idx  BaseOutputStream.h.D7EF2FA2870A98C5.idx  CommandLineParameters.cpp.AB2AAB082B2995E8.idx  CommandLineParameters.h.EF1C9EAF5C2BFB41.idx  ComplexMatrix.cpp.63143AFB14ACA617.idx  ComplexMatrix.h.638F8E03FD6318E1.idx  CuboidOutputStream.cpp.9B40AB84FCAABF81.idx  CuboidOutputStream.h.BDEB3B9CE7F783A9.idx  DimensionSizes.h.967E42FB18496A76.idx  ErrorMessages.h.0D596FEECB08BA36.idx  ErrorMessagesLinux.h.24D57F1DDDED41E1.idx  FftwComplexMatrix.cpp.0B45A41C160F6443.idx  FftwComplexMatrix.h.92C725DA5315395B.idx  FftwRealMatrix.cpp.2E66E6BCD43525D3.idx  FftwRealMatrix.h.44C8434C4BCD32C9.idx  Hdf5File.cpp.72FAED8AF5CA5A96.idx  Hdf5File.h.E2E95B8BBC7E6706.idx  Hdf5FileHeader.cpp.574AAE422C959A9D.idx  Hdf5FileHeader.h.7D3FD8380B9C2999.idx  IndexMatrix.cpp.B47C5CAD298C585A.idx  IndexMatrix.h.EFAA67B28E6D6EC1.idx  IndexOutputStream.cpp.ED04FA3F0477062D.idx  IndexOutputStream.h.797DD92E27CDAD14.idx  KSpaceFirstOrderSolver.cpp.29B1BA0BF8990241.idx  KSpaceFirstOrderSolver.h.6B77C8DFD1C92BD8.idx  Logger.cpp.5F084D1A16DF8097.idx  Logger.h.729F950AE55EEA0B.idx  MatrixContainer.cpp.BADD9587F556E1D1.idx  MatrixContainer.h.612B884401C143BD.idx  MatrixRecord.h.1E9660E52FE129D1.idx  OutputMessages.h.7AEF7592FB1B7331.idx  OutputMessagesLinux.h.556802C3E4026D0B.idx  OutputStreamContainer.cpp.F25679DAD404C16D.idx  OutputStreamContainer.h.CA276D8CF912EF88.idx  Parameters.cpp.CCCCD0C124D610C8.idx  (+7 more)
docs/: KSpace.mdj  KSpaceSolverElastic.m  KSpaceUnitTest.cpp  Makefile  example_input.h5  example_output.h5  manual.nb
lib/Containers/: MatrixContainer.cpp  MatrixContainer.h  OutputStreamContainer.cpp  OutputStreamContainer.h
lib/Hdf5/: Hdf5File.cpp  Hdf5File.h
lib/KSpace/: KCmds.h  KConfig.cpp  KConfig.h  KIndexOutputStream.cpp  KIndexOutputStream.h  KInterp.h  KMatrix.h  KMatrixCached.h  KMatrixUnitTest.cpp  KOutput.cpp  KOutput.h  KSampler.cpp  KSampler.h  KSamples.cpp  KSamples.h  KSpaceSolver.cpp  KSpaceSolver.h  KSpaceSolverElastic.cpp  KSpaceSolverFluid.cpp  KVersion.h
lib/KSpaceSolver/: KSpaceFirstOrderSolver.cpp  KSpaceFirstOrderSolver.h
lib/Logger/: ErrorMessages.h  OutputMessages.h
lib/MatrixClasses/: BaseFloatMatrix.cpp  BaseFloatMatrix.h  BaseMatrix.h  ComplexMatrix.cpp  ComplexMatrix.h  FftwComplexMatrix.cpp  RealMatrix.h  (+6 more)
src/: KSpaceUnitTest.cpp  kspaceFirstOrder.cpp
(+12 files in other folders)
